# Deepagent

./: .gitignore  ALL_12_FOUNDATIONS_COMPLETE.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETE_12_FOUNDATIONS.md  FOUNDATION4_COMPLETE.md  FOUNDATION4_DESIGN.md  FOUNDATION7_COMPLETE.md  FOUNDATION7_DESIGN.md  FRAMEWORK_COMPLETE.md  FRAMEWORK_STATUS.md  LICENSE  MANIFEST.in  MEDIUM_ARTICLE.md  PHASE1_COMPLETE.md  PHASE1_INTEGRATION_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_DESIGN.md  PHASE2_PROGRESS.md  PROJECT_SUMMARY.md  QUICKSTART_PHASE2.md  README.md  REMAINING_FOUNDATIONS_PLAN.md  SEAL_DEMO_RESULTS.md  SECURITY_FRAMEWORK_COMPLETE.md  SECURITY_IMPLEMENTATION_STATUS.md  SECURITY_SESSION_SUMMARY.md  SESSION_COMPLETE.md  TECHNICAL_BRIEF.md  TUTORIAL.md  count_lines.py  demo_full_deepagent_seal.py  demo_seal_continual_learning.py  pyproject.toml  quickstart.py  requirements.txt  setup.py  test_attack_patterns.py  test_audit_logger.py  test_forensic_analyzer.py  (+8 more)
audit_logs/demo1/: audit.jsonl
audit_logs/demo2/: audit.jsonl
audit_logs/demo3/: audit.jsonl
audit_logs/demo4/: audit.jsonl
audit_logs/demo4/exports/: recent_10.md  user_0_actions.csv
audit_logs/demo5/: audit.jsonl
benchmarks/: benchmark_suite.py
deepagent/: __init__.py
deepagent/audit/: __init__.py  audit_logger.py  forensic_analyzer.py  query_interface.py
deepagent/autonomy/: __init__.py  autonomy_adjuster.py  risk_assessor.py
deepagent/behavioral/: __init__.py  anomaly_detector.py  behavior_baseline.py
deepagent/core/: __init__.py  agent.py  memory.py  reasoning.py  safe_agent.py  self_editing_agent.py
deepagent/deception/: __init__.py  consistency_checker.py  deception_scorer.py  truth_evaluator.py
deepagent/governance/: __init__.py  approval_workflow.py  governance_policy.py  override_manager.py
deepagent/integrations/: __init__.py  databases.py  llm_providers.py  observability.py  vector_stores.py
deepagent/intent/: __init__.py  context_manager.py  intent_tracker.py
deepagent/provenance/: __init__.py  provenance_tracker.py  signature_manager.py  trust_scorer.py
deepagent/purpose/: __init__.py  boundary_enforcer.py  capability_limiter.py  purpose_binder.py
deepagent/safety/: __init__.py  config.py  exceptions.py
deepagent/safety/authorization/: __init__.py  action_classifier.py  action_policies.py  risk_scorer.py
deepagent/safety/memory_firewall/: __init__.py  attack_patterns.py  memory_validator.py  reasoning_monitor.py  sequence_analyzer.py
deepagent/safety/validation/: __init__.py  content_sanitizer.py  input_validator.py  prompt_injection_detector.py
deepagent/sandbox/: __init__.py  resource_monitor.py  rollback_system.py  sandbox_manager.py
deepagent/supervision/: __init__.py  intervention_manager.py  meta_supervisor.py  policy_enforcer.py
deepagent/tools/: __init__.py  executor.py  retrieval.py
deepagent/training/: __init__.py  seal.py  toolpo.py
docs/: ARCHITECTURE.md  PHASE1_API_GUIDE.md  QUICK_REFERENCE.md  WHITEPAPER.md
examples/: __init__.py  basic_usage.py  foundation7_audit_demo.py  genesis_ai_integration.py  phase2_attack_detection_demo.py  production_llm_example.py  seal_learning_example.py  secure_agent_demo.py
tests/: __init__.py  test_agent.py
